# testC

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  cmake.yml
Doc/: BISEC.HWP  Biseccion.odt  BlockPower.odt  Convert.odt  Defines.odt  ERRORMAT.HWP  Error.odt  INFOPI.WP  INFOQZ.WP  IO.odt  InvertedPower.odt  MEMO.WKB  Memo.odt  Operator.odt  POTINV.HWP  PotenciaInversa.odt  QZEXPLIC.HWP  QZExplicit.odt  QZImplicit.odt  QzExplicito.odt  VAP.odt  VEP.HWP  VEP.odt
LIBRERIA/: FCMATRIZ.C  OPMATRIZ.C
MEMO/: BLOCK.HWP  FCMATRIZ.HWP  IOMATRIZ.HWP  NUEVO.HWP  OPMATRIZ.HWP  QZIMPLIC.HWP  VAP.HWP
QZEXPLIC/: QZEXPLIC.C
Samples/: A10.MMM  A18.MMM  A3.MMM  A4.MMM  A44.MMM  A5.MMM  B10.MMM  B18.MMM  B3.MMM  B4.MMM  B44.MMM  B5.MMM  I10.MMM  I3.MMM  I4.MMM  I5.MMM
VAP/: VAP.C  VAP.H
VEP/: VEP.H
inc/: ERRORMAT.H  NUEVO.H  OPMATRIZ.H  QZEXPLIC.H  QZIMPLIC.H  bisection.h  convert.h  defines.h  drvBisection.h  drvEigen.h  error.h  genericState.h  io.h  operator.h  qzExplicit.h  stateMachine.h  vap.h  vep.h
src/: BISEC_MAIN.C  DRVBISEC.C  ERRORMAT.C  IOMATRIZ.C  QZEXPLIC.C  QZIMPLIC_MAIN.C  VEP.C  bisection.c  bisectionMain.c  convert.c  drvBisection.c  drvEigen.c  error.c  io.c  main.cpp  operator.c  qzExplicit.c  qzExplicitMain.c  qzImplicit.c  stateMachine.cpp  vap.c  vep.c
